--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,49 @@
   background-color: #FFFFFA;
   min-height: 100vh;
   padding-top: 12px;
+  font-family: 'Quicksand', sans-serif;
+  /* font-family: 'Abel', sans-serif; */
+  /* font-family: 'Ropa Sans', sans-serif; */
+  /* font-family: 'Heebo', sans-serif; */
 }
 
 h1 {
   font-size: 1.2em;
   margin: 0;
   color: #00585E;
+}
+
+h2 {
+  color: #06D6A0;
+}
+
+button {
+  background-color: #06D6A0;
+  color: #FFFFFA;
+  padding: 10px 14px;
+  margin-bottom: 20px;
+}
+
+.main-section {
+  max-width: 80%;
+  margin: 0 auto;
+  color: #00585E;
+}
+
+p {
+  text-align: left;
+}
+
+.happy-dog {
+  background-image: url('./images/happydog.png');
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: middle center;
+  position: fixed;
+  float: bottom;
+  width: 100%;
+  height: 100%;
+  /* background-position: 36px 0px; */
 }
 
 
