--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,14 @@ button {
   margin-bottom: 20px;
 }
 
+.main-section a {
+  margin-top: 40px;
+  background-color: #06D6A0;
+  color: #FFFFFA;
+  padding: 10px 14px;
+  text-decoration: none;
+}
+
 .main-section {
   max-width: 80%;
   margin: 0 auto;
@@ -35,6 +43,7 @@ button {
 
 p {
   text-align: left;
+  margin-bottom: 40px;
 }
 
 .happy-dog {
@@ -47,6 +56,39 @@ p {
   width: 100%;
   height: 100%;
   /* background-position: 36px 0px; */
+}
+
+form {
+  background-color: lightgray;
+  margin: 40px auto;
+  width: 90%;
+  padding: 20px 0;
+  display: grid;
+  grid-template-columns: 33% 66%;
+  grid-template-rows: 25% 19px auto;
+  grid-row-gap: 1em;
+
+}
+
+input {
+  margin-left: 20px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  justify-self: start;
+  width: 150px;
+
+}
+
+label {
+  margin-left: 30px;
+  font-size: 12px;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  justify-self: end;
+}
+
+.submit-btn {
+  margin: 0 auto;
 }
 
 
