--- a/src/Components/TabBar/TabBar.css
+++ b/src/Components/TabBar/TabBar.css
@@ -30,7 +30,7 @@ body {margin:0;}
 
 .navbar {
   overflow: hidden;
-  background-color: #00585E;
+  background-color: #06D6A0;
   position: fixed;
   bottom: 0;
   width: 100%;
